src/main/java/calc/calc.jj
options
{
  static = false;
}

PARSER_BEGIN(Calculator)
package calc;
import java.io.PrintStream ;
public class Calculator {
	double previousValue = 0.0 ;
	public static void main( String[] args )throws ParseException, TokenMgrError, NumberFormatException {
		Calculator parser = new Calculator( System.in ) ;
		parser.Start( System.out ) ;
	}
}
PARSER_END(Calculator)

SKIP:{ " " }

TOKEN:{< EOL : "\n"|"\r"|"\r\n" >}
TOKEN:{< PLUS : "+">}
TOKEN :{ < MINUS : "-" > }
TOKEN:{< TIMES : "*" > }
TOKEN:{< DIVIDE : "/" > }
TOKEN:{< NUMBER : <DIGITS>| <DIGITS>"." <DIGITS> | <DIGITS>"."|"." <DIGITS> >}
TOKEN : {< #DIGITS : (["0"-"9"])+ >}

void Start(PrintStream printStream) throws NumberFormatException :
{}
{
	(
		previousValue = Expression()
		<EOL>
		{ printStream.println(previousValue); }
	)*
	<EOF>
}

double Expression() throws NumberFormatException :
{
	double i;
	double value;
}
{
	value = Term()
	(
		<PLUS>
		i = Term()
		{ value += i;}
		|
		<MINUS>
		i = Term()
		{ value -= i; }
	)*
	{ return value; }
}

double Term() throws NumberFormatException :
{
	double i;
	double value;
}
{
	value = Primary()
	(
		<TIMES>
		i = Primary ()
		{ value *= i;}
		|
		<DIVIDE>
		i = Primary ()
		{ value /= i; }
	)*
	{ return value; }
}

double Primary() throws NumberFormatException :
{
	Token t;
	double d;
}
{
	t = <NUMBER>
	{ return Double.parseDouble( t.image ); }
}
